cleaned up my fix a bit
changed README.md, and cleaned up index.html

--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 <body>
     <div class="wrapper">
         <img src="img/mgs.svg" alt="Under Development." class="image">
-        <h1 class="head">future home of archieMGS, a modular game system that lets you play all of your favorite
-            retro games without the hassle of plugging multiple consoles into your TV.
+        <h1 class="head">
+        future home of archieMGS
         </h1>
-        <p class="text">check out <a href="https://github.com/users/sayofthelor/projects/1" class="repo-link">our github project</a> to see where we're at</p>
+        <p class="text">while this future home is unoccupied, you can check out <a href="https://github.com/users/sayofthelor/projects/1" class="repo-link">our github project</a> to see where we're at</p>
     </div>
 </body>
 <!--
-    “Here's to the crazy ones. 
-    The misfits. The rebels. The troublemakers. 
-    The round pegs in the square holes. The ones who see things differently. 
-    They're not fond of rules. And they have no respect for the status quo. 
-    You can quote them, disagree with them, glorify or vilify them. 
-    About the only thing you can't do is ignore them. Because they change things. 
-    They push the human race forward. And while some may see them as the crazy ones, we see genius. 
-    Because the people who are crazy enough to think they can change the world, are the ones who do.”
+“Here's to the crazy ones. 
+The misfits. The rebels. The troublemakers. 
+The round pegs in the square holes. The ones who see things differently. 
+They're not fond of rules. And they have no respect for the status quo. 
+You can quote them, disagree with them, glorify or vilify them. 
+About the only thing you can't do is ignore them. Because they change things. 
+They push the human race forward. And while some may see them as the crazy ones, we see genius. 
+Because the people who are crazy enough to think they can change the world, are the ones who do.”
 
-    Thanks for being with us in this time of uncertainty of the final product.
-    If archieMGS ever makes it to market, it's gonna because of people like you.
-    The tinkerers. The geeks. The people daring enough to press F12 and read what's here.
-    You guys are awesome. No matter what, we're going to try and make archieMGS great.
+Thanks for being with us in this time of uncertainty of the final product.
+If archieMGS ever makes it to market, it's gonna because of people like you.
+The tinkerers. The geeks. The people daring enough to press F12 and read what's here.
+You guys are awesome. No matter what, we're going to try and make archieMGS great.
 -->
 </html>
