Added redirect to primary domain.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/under-construction.css">
 </head>
 
-<body>
+<body onload="redirectMain()">
     <div class="wrapper">
         <img src="img/mgs.svg" alt="Under Development." class="image">
         <h1 class="head">
@@ -17,6 +17,12 @@
         </h1>
         <p class="text">while this future home is unoccupied, you can check out <a href="https://github.com/users/sayofthelor/projects/1" class="repo-link">our github project</a> to see where we're at</p>
     </div>
+    
+    <script>
+        function redirectMain() {
+            location.replace("http://nt.archiemgs.tech"); 
+        }
+    </script> 
 </body>
 <!--
 “Here's to the crazy ones. 
@@ -29,7 +35,7 @@ They push the human race forward. And while some may see them as the crazy ones,
 Because the people who are crazy enough to think they can change the world, are the ones who do.”
 
 Thanks for being with us in this time of uncertainty of the final product.
-If archieMGS ever makes it to market, it's gonna because of people like you.
+If archieMGS ever makes it to market, it's gonna be because of people like you.
 The tinkerers. The geeks. The people daring enough to press F12 and read what's here.
 You guys are awesome. No matter what, we're going to try and make archieMGS great.
 -->
