temporarily comment out redirect script

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
         </h1>
         <p class="text">while this future home is unoccupied, you can check out <a href="https://github.com/users/sayofthelor/projects/1" class="repo-link">our github project</a> to see where we're at</p>
     </div>
-    
-    <script>
+   
+   <!-- <script>
         function redirectMain() {
             location.replace("http://nt.archiemgs.tech"); 
         }
-    </script> 
+    </script>
+-->
+
 </body>
 <!--
 “Here's to the crazy ones. 
